# monetrack-cli

./: .gitignore  .pre-commit-config.yaml  ADRs.md  ARCHITECTURE.md  CHANGELOG.md  CONCEPT.md  LICENSE  PLAN.md  README.md  db.py  main.py  pyproject.toml
.github/workflows/: ci.yml
monetrack/: __init__.py
monetrack/application/: __init__.py  cli.py  formatters.py  interactive.py  web.py
monetrack/application/static/: app.js  index.html  style.css
monetrack/domain/: models.py
monetrack/ports/: __init__.py  db_adapter.py  db_port.py
monetrack/services/: portfolio_service.py
tests/: conftest.py  test_cli.py  test_db_adapter.py  test_domain.py  test_formatters.py  test_interactive.py  test_portfolio_service.py
