[project]
name = "monetrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "typer>=0.26.7",
    "rich>=15.0.0",
    "platformdirs>=4.10.0",
    "prompt-toolkit>=3.0.52",
    "click>=8.4.1",
]



[project.scripts]
monetrack = "monetrack.application.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "monetrack",
    "monetrack.domain",
    "monetrack.ports",
    "monetrack.services",
    "monetrack.application"
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
    "prek>=0.4.5",
    "ty>=0.0.49",
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
]



[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "RUF", # Ruff-specific rules
    "C90", # McCabe complexity
]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10
